--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     <script src="./strings_numbers.js"></script>
     <script src="conditional_code.js"></script>
     <script src="functions.js"></script>
+    <script src="./Booleans_Operatoren.js"></script>
+    <script src="15_Übungen.js"></script>
 </body>
 </html>
