--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Grundlagen</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <script src="./basics.js"></script>
@@ -12,5 +13,22 @@
     <script src="functions.js"></script>
     <script src="./Booleans_Operatoren.js"></script>
     <script src="15_Übungen.js"></script>
+    
+
+    <h1 id="website_title">Der Titel der Webseite</h1>
+
+    <div class="" id="test_div"></div>
+    
+    <div id="btn_test"> </div>
+
+    <input id="test_input" type="number" value="5">
+    <input type="checkbox" checked="true">
+    <p id="task"> blablabla</p>
+
+    <p id="our_p_tag">ich bin das p tag</p>
+    <button onclick="toggleDNone('our_p_tag')">bitte ausführen</button>
+
+
 </body>
+<script src="dom_manipulation.js"></script>
 </html>
